--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Practice Title </h1>
-      <p class="lead">by EDIT NAME(S) here</p>
-      <p class="lead">Last updated on editor November 18, 2024</p>
+      <h1>USA homes vs Non-USA homes in Census Tract 5039 </h1>
+      <p class="lead">by Demetra and Lillie here</p>
+      <p class="lead">Last updated on editor November 24, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="section1">
+  <section id="Introduction">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -89,7 +89,7 @@
   <!-- End of Section 1 -->
 
   <!-- Beginning of Section 2 -->
-  <section id="section2" class="bg-light">
+  <section id="Methods" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
