--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>USA homes vs Non-USA homes in Census Tract 5039 </h1>
-      <p class="lead">by Demetra and Lillie here</p>
+      <p class="lead">by Demetra and Lillie </p>
       <p class="lead">Last updated on editor November 24, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
