--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- End of Section 2>
 
   <!-- Beginning of Section 3-->
-  <section id="section3">
+  <section id="Findings">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -156,7 +156,7 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="section4">
+  <section id="Conclusion">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
