--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
           <p>A good introduction raises your guiding question, outlines key findings that answer it, and explains why it matters to both our community partner. Since you also need to provide essential background information for general readers, a typical introduction requires at least 2-3 paragraphs.</p>
 
-          <p>Compose your data story in your Google Doc, where it's easier to write and edit, especially when working with other people. When you're ready, create your own copy of this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template </a>, and publish it online using Settings > Pages. When your version is published, copy and paste the live web link into your README file so you can easily find it.</p>
+          <p>Compose your data story in your Google Doc, where it's easier to write and edit, especially when working with other people. When you're ready, create your own copy of this <a href="https://cljct.org/about-us/our-mission-and-history/">Center for Leadership and Justice </a>, and publish it online using Settings > Pages. When your version is published, copy and paste the live web link into your README file so you can easily find it.</p>
 
           <p>In your GitHub copy of this template, open the "index.html" file to see how everything must be written in HTML format. Click the pencil symbol in GithHub to edit the file. HINT: In the upper-right corner, switch the dropdown menu from "No Wrap" to "Soft Wrap" to easily view long segments of code in your screen.</p>
 
