--- a/index.html
+++ b/index.html
@@ -66,19 +66,18 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>Introduction: Affordable Housing Crisis</h2>
+          <h2>Introduction: USA homes vs. Non-USA Homes</h2>
 
-          <p class="lead">Pull readers into your data story with a compelling introduction. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
+          <p class="lead">Census tract 5039 provides a lens for us to analyze USA homes to non-USA homes. With this information, we hope to help increase afforable home-ownership throughout the census tract, and city.</p>
 
-          <p>A good introduction raises your guiding question, outlines key findings that answer it, and explains why it matters to both our community partner. Since you also need to provide essential background information for general readers, a typical introduction requires at least 2-3 paragraphs.</p>
+          <p>Access to affordable and equitable housing is a cornerstone of thriving communities. This research focuses on Census Tract 5039, exploring how homeownership experiences differ between USA homes and non-USA homes in the area. Specifically, it examines ownership rates, housing conditions, and financial barriers that influence these outcomes.</p>
 
-          <p>Compose your data story in your Google Doc, where it's easier to write and edit, especially when working with other people. When you're ready, create your own copy of this <a href="https://cljct.org/about-us/our-mission-and-history/">Center for Leadership and Justice </a>, and publish it online using Settings > Pages. When your version is published, copy and paste the live web link into your README file so you can easily find it.</p>
+          <p>This question is critical for the Urban Suburban Affordables and the Center for Leadership and Justice because it directly addresses issues of equity, inclusion, and opportunity within Hartford. For the Urban Suburban Affordables, understanding these dynamics helps guide efforts to develop housing solutions that serve diverse populations. For the<a href="https://cljct.org/about-us/our-mission-and-history/">Center for Leadership and Justice </a>, this research provides insights into structural inequities that shape the lives of immigrant and underserved communities, empowering their advocacy for just policies. Together, these findings aim to support initiatives that foster equitable housing and community development. </p>
 
-          <p>In your GitHub copy of this template, open the "index.html" file to see how everything must be written in HTML format. Click the pencil symbol in GithHub to edit the file. HINT: In the upper-right corner, switch the dropdown menu from "No Wrap" to "Soft Wrap" to easily view long segments of code in your screen.</p>
+    
 
-          <p>Paragraphs like this one must begin with a "p" tag and end with a "p" closing tag.</p>
-
-          <p>Links must begin and end with "a" anchor tags, with the web address inside either single or double quotes. If you need guidance, check out this <a href='https://www.w3schools.com/html/html_basic.asp'>W3Schools HTML Tutorial</a>.
+          <p>Comparing homes to neighborhood "comps" (similar nearby properties) is key for determining market value, setting fair prices, and guiding buying or investment choices. Comps show a home’s position in the local market based on size, condition, and features, helping sellers price competitively, ensuring buyers pay fairly, and aiding investors in finding opportunities. Applying this to Census Tract 5039 in northwest Hartford, we’ll analyze local homes against nearby comps to assess market position and value trends. This focused approach will highlight pricing trends affecting property values, providing insights for our partners. For this build we focused on one street in our tract, however our methods could be applied to more properties. This is important to our partners because they can compare non-USA homes. 
+.</p>
 
           <p>Change default navigation labels (such as "Section 1") to customized labels to guide your readers. While some authors use traditional headers (such as "Findings" or "Sources & Methods"), you're welcome to innovate with more creative headers (such as "Why It Matters" or "How We Made This"). Be sure to EDIT names in TWO locations in the template: the Navigation Container (around lines 30-50) and the corresponding Sections labels further below. EDIT only the reader-friendly labels, and do not change the underlying code.</p>
 
