--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#section3">Findings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section4">Conclusion</a>
+            <a class="nav-link js-scroll-trigger" href="#section4">Sources</a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
 
           <h2>Methods</h2>
 
-          <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
+          <p>We referred to the City of Hartford Property Information Viewer to find neighboring homes and find further data on each of the USA properties, and from there collected data from a few other properties on each street (City of Hartford Property Viewer). </p>
 
           <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
 
@@ -153,12 +153,12 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="Conclusion">
+  <section id="Sources">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>Conclusion</h2>
+          <h2>Sources</h2>
 
           <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML image tag ("img") that points to a source image ("src") stored in your repo, as shown below:</p>
 
