--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="Introduction">
+  <section id="section1">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
