--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="section1">
+  <section id="#section1">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -109,7 +109,7 @@
   <!-- End of Section 2>
 
   <!-- Beginning of Section 3-->
-  <section id="Findings">
+  <section id="#section3">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
