--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- End of Section 1 -->
 
   <!-- Beginning of Section 2 -->
-  <section id="Methods" class="bg-light">
+  <section id="#section2" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -153,7 +153,7 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="Sources">
+  <section id="#section4">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
