--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
   <!-- Beginning of Section 1 -->
-  <section id="#section1">
+  <section id="section1">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -85,7 +85,7 @@
   <!-- End of Section 1 -->
 
   <!-- Beginning of Section 2 -->
-  <section id="#section2" class="bg-light">
+  <section id="section2" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -109,7 +109,7 @@
   <!-- End of Section 2>
 
   <!-- Beginning of Section 3-->
-  <section id="#section3">
+  <section id="section3">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -153,7 +153,7 @@
   <!-- End of Section 3 -->
 
   <!-- Beginning of Section 4 -->
-  <section id="#section4">
+  <section id="section4">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
