--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@
 
           <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
 
-      <iframe title="Non-USA Homes Sales Price vs. Current Value " aria-label="Stacked Bars" id="datawrapper-chart-gMEXT" src="https://datawrapper.dwcdn.net/gMEXT/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+     <iframe title="Average Current Value of Non USA Homes in Census Tract 5039 (2024 $ Value)  " aria-label="Column Chart" id="datawrapper-chart-lVCzu" src="https://datawrapper.dwcdn.net/lVCzu/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="482" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+</script>
+    p>EDIT CAPTIONS like this -- Figure 1: Average Current Value of USA Homes vs Non-USA Homes
+          
+ <iframe title="Non-USA Homes Sales Price vs. Current Value " aria-label="Stacked Bars" id="datawrapper-chart-gMEXT" src="https://datawrapper.dwcdn.net/gMEXT/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
           
 <iframe title="USA Homes Sale Price vs. Current Value" aria-label="Stacked Bars" id="datawrapper-chart-ILinE" src="https://datawrapper.dwcdn.net/ILinE/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="334" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
-          <p>EDIT CAPTIONS like this -- Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
-
+          <
         </div>
       </div>
     </div>
