--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
           <p>We referred to the City of Hartford Property Information Viewer to find neighboring homes and find further data on each of the USA properties, and from there collected data from a few other properties on each street (City of Hartford Property Viewer). </p>
 
-          <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
+          <p> Several key insights have been seen within census tract 5039. USA homes and non-USA homes have many differences regarding sale price, market value, owner-occupancy, and  LLC ownership. For this build, we are using data from Tower Ave, Granby St, Colebrook St, and Harold St. Each street contains multiple USA homes that will be compared to multiple non-USA homes on the same street. 
+</p>
 
      <iframe title="Average Current Value of Non USA Homes in Census Tract 5039 (2024 $ Value)  " aria-label="Column Chart" id="datawrapper-chart-lVCzu" src="https://datawrapper.dwcdn.net/lVCzu/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="482" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
