--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>USA homes vs Non-USA homes in Census Tract 5039 </h1>
+      <h1>USA homes vs Non-USA Homes in Northwest Hartford </h1>
       <p class="lead">by Demetra and Lillie </p>
-      <p class="lead">Last updated on editor November 24, 2024</p>
+      <p class="lead">Last updated on editor December 2, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
