--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -144,13 +144,8 @@
           
           <h4>Works Cited:</h4>
 
-          <p>Lurye, Rebecca. “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs.” Hartford Courant, May 31, 2019. <a href='https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html'>https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html</a>.</p>
-
-          <p>“Resident Town Export.” CT.Gov EdSight, <a href='https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export'>https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export</a>. Accessed 29 Nov. 2022.</p>
-
           <br>
 
-          <p>Optional Hint: To display a clickable web link in the bibliography, look at the HTML code in GitHub for the examples above. See how the URL appears twice: once in the "href" and again in the display text. This is not required for your data story, but it looks good and helps readers to click and view your sources.</p>
 
         </div>
       </div>
@@ -166,62 +161,9 @@
 
           <h2>Sources</h2>
 
-          <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML image tag ("img") that points to a source image ("src") stored in your repo, as shown below:</p>
+          
 
-          <img src="sample-image.jpg" style="width: 100%; margin: 30px 0">
 
-          <p>Figure 2: Describe your image in a caption, and always credit the source if someone else created it.</p>
-
-          <h4>Optional Subheaders</h4>
-
-          <p>Use subheader tags (such as "h4") to break up long sections of text without creating a new section.</p>
-
-          <h4>Collaborate with Co-Author</h4>
-          <p>Compose and edit your data story in Google Docs, where co-authors can work simultaneously. When you're ready to migrate to GitHub, create ONE data story template in ONE author's GitHub account, because only ONE person can edit at a time. But the GitHub account owner can go to Settings > Collaborators > Add People to invite a co-author by using their GitHub username, as shown below. But be careful not to overwrite each other's edits!</p>
-
-          <img src="screenshots/github-collaborators.png" style="width: 100%; margin: 30px 0">
-
-          <h4>Change background colors</h4>
-          <p> This template uses <a href='https://getbootstrap.com/docs/5.0/utilities/background/'>Bootstrap background colors</a>. For example, search this "index.html" file for "bg-primary", which sets the navigation bar (line 28), header (line 56), and footer (around line 245) to blue. Changing it to "bg-secondary" switches those colors to gray. Learn about other color options at the link above.</p>
-
-          <h4>Quicker Edits on your Local Computer</h4>
-
-          <p>Instead of slowly making edits on GitHub and waiting for them to appear online, you can quickly make multiple edits in your local computer and view them instantly in your browser. Here's a list of steps:
-            <ol>
-              <li>Go to your GitHub repo and select Code > Download Zip and uncompress the folder.</li>
-              <img src="screenshots/code-download.png" style="width: 75%; margin: 30px 0">
-              <li>Install a code editor tool. My favorite free open-source option is the <a href="https://pulsar-edit.dev"> open-source Pulsar text editor</a>, but there are many other options.</li>
-              <li>Open the "index.html" file with your code editor and make edits.</li>
-              <li>In your browser, go to File > Open to view the "index.html" file that is on your local computer. Since this version is temporarily stored on your local computer, your browser bar will display its location in a local format "file..." rather than the online format "https..."</li>
-              <img src="screenshots/index-open-with.png" style="width: 75%; margin: 30px 0">
-              <li>In your code editor, save changes to your "index.html" file, then refresh your browser to instantly view your changes made on your local computer.</li>
-              <img src="screenshots/save-edits.png" style="width: 100%; margin: 30px 0">
-              <li>After editing, upload the contents of "index.html" from your local computer to your online GitHub account, then view your edits the public web.
-            </ol>
-          </p>
-
-          <h4>Two Options for Tables</h4>
-
-          <p>If you need to create a table, first try the Datawrapper Tables tool -- see <a href='https://handsondataviz.org/table.html'>HODV Chapter 8</a> -- and embed the results like this:</p>
-
-          <iframe title="Table 1: Suburbs Offer a Small Percentage of Their Seats to Hartford Open Choice Students " aria-label="Table" id="datawrapper-chart-Qrb7J" src="https://datawrapper.dwcdn.net/Qrb7J/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="972"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-          </script>
-
-          <p>Table 1: Add your standalone caption here.</p>
-
-          <p>A second option is to use the <a href="https://www.tablesgenerator.com/html_tables">Tables Generator HTML tool</a>. Go to File > Import or manually enter your table data, then Generate the HTML code, and paste it here, similar to this sample: </p>
-
-          <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg .tg-lqy6{text-align:right;vertical-align:top}
-          .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-          .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}
-          </style>
-          <table class="tg">
           <thead>
             <tr>
               <th class="tg-0pky">Header A</th>
