--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ x<!DOCTYPE html>
 
           <h2>Introduction: USA homes vs. Non-USA Homes</h2>
 
+                    <img src="5039.png" style="width: 100%; margin: 30px 0">
+
+
           <p class="lead">Census tract 5039 provides a lens for us to analyze USA homes to non-USA homes. With this information, we hope to help increase afforable home-ownership throughout the census tract, and city.</p>
 
           <p>Access to affordable and equitable housing is a cornerstone of thriving communities. This research focuses on Census Tract 5039, exploring how homeownership experiences differ between USA homes and non-USA homes in the area. Specifically, it examines ownership rates, housing conditions, and financial barriers that influence these outcomes.</p>
