--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ x<!DOCTYPE html>
           <h2>Introduction: USA homes vs. Non-USA Homes</h2>
 
                     <img src="5039.png" style="width: 100%; margin: 30px 0">
+          <p>Image of 5039 taken from DataVizForAll.com</p>
 
 
           <p class="lead">Census tract 5039 provides a lens for us to analyze USA homes to non-USA homes. With this information, we hope to help increase afforable home-ownership throughout the census tract, and city.</p>
