--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ x<!DOCTYPE html>
 
           <p>Access to affordable and equitable housing is a cornerstone of thriving communities. This research focuses on Census Tract 5039, exploring how homeownership experiences differ between USA homes and non-USA homes in the area. Specifically, it examines ownership rates, housing conditions, and financial barriers that influence these outcomes.</p>
 
+          <p> How do USA homes measure up to block/neighborhood comparison groups (comps)? </p>
+
           <p>This question is critical for the Urban Suburban Affordables and the Center for Leadership and Justice because it directly addresses issues of equity, inclusion, and opportunity within Hartford. For the Urban Suburban Affordables, understanding these dynamics helps guide efforts to develop housing solutions that serve diverse populations. For the <a href="https://cljct.org/about-us/our-mission-and-history/">Center for Leadership and Justice </a>, this research provides insights into structural inequities that shape the lives of immigrant and underserved communities, empowering their advocacy for just policies. Together, these findings aim to support initiatives that foster equitable housing and community development. </p>
 
 
