--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ x<!DOCTYPE html>
     <div class="container text-center">
       <h1>USA homes vs Non-USA Homes in Northwest Hartford </h1>
       <p class="lead">by Demetra and Lillie </p>
-      <p class="lead">Last updated on editor December 4, 2024</p>
+      <p class="lead">Last updated on December 6, 2024</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
@@ -68,9 +68,6 @@ x<!DOCTYPE html>
 
           <h2>Introduction: USA homes vs. Non-USA Homes</h2>
 
-                    <img src="5039.png" style="width: 80%; margin: 30px 0">
-          <p>Image of 5039 taken from DataVizForAll.com</p>
-
 
           <p class="lead">Census tract 5039 provides a lens for us to analyze USA homes to non-USA homes. </p>
 
@@ -78,6 +75,9 @@ x<!DOCTYPE html>
 
 
           <p>This research focuses on Census Tract 5039, exploring how homeownership experiences differ between USA homes and non-USA homes in the area. Specifically, focusing on the question: How do USA homes measure up to block/neighborhood comparison groups (comps)? Comparing homes to neighborhood "comps" (similar nearby properties) is key for determining market value, setting fair prices, and guiding buying or investment choices. Comps show a home’s position in the local market based on a variety of factors. Applying this to Census Tract 5039 in northwest Hartford, we’ll analyze local homes against nearby comps to assess market position and value trends. This focused approach will highlight pricing trends affecting property values, providing insights for our partners. </p>
+          
+           <img src="5039.png" style="width: 75%; margin: 30px 0">
+          <p>The green squares show the location of USA Homes in Northwest Hartford, Census Tract 5039. Image taken from DataVizForAll.com</p>
 
         </div>
       </div>
