--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ x<!DOCTYPE html>
 
           <p> We found everal key insights when comparing USA to non-USA homes within census tract 5039. USA homes and non-USA homes have many differences regarding sale price, market value, owner-occupancy, and  LLC ownership. For this, we are using data from Tower Ave, Granby St, Colebrook St, and Harold St. Each street contains multiple USA homes that will be compared to multiple non-USA homes on the same street. </p>
 
-         <p></p> When looking at average current value, USA Homes are slightly lower than non-usa homes of similar sizes and characteristics. </p>
+         <p></p> When looking at average current value, USA Homes tend to be 24% less valuable than non-USA homes of similar sizes and characteristics. For example in the chart below, USA Homes on Harold St averaged at $217,100 which was 7% lower than Non-USA hoomes on this street. Tower Ave had an even greater difference of 27%. </p>
     
 <iframe width="731" height="453" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTt8ldA9uBNSnnGd1LpfgFgJ80a7Uw9BuCi7x45AIXMUjUzYr5ZQujknmJhTmpGFaKWFaRz0cKcmxzQ/pubchart?oid=504750315&amp;format=interactive"></iframe>
            <p>Figure 1: </p>
