--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ x<!DOCTYPE html>
 
 <p>This chart illustrates the average current value of homes in Census Tract 5039, comparing USA and Non-USA homes across four streets: Harold St, Tower Ave, Colebrook St, and Granby St. Harold St has the highest average home values for both categories, with Non-USA homes slightly surpassing USA homes at approximately $225,000. On Tower Ave, Non-USA homes show a significantly higher average value compared to USA homes, which are valued around $125,000. Similarly, on Colebrook St and Granby St, Non-USA homes maintain higher average values than USA homes, although the differences are less pronounced than on Tower Ave. Overall, Non-USA homes tend to have greater average values than USA homes across all streets analyzed.</p>
 
+          <img src="Home Average Chart.png" style="width: 75%; margin: 30px 0">  
  
           
         
