--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ x<!DOCTYPE html>
 
           <p>We referred to the City of Hartford Property Information Viewer to find neighboring homes and find further data on each of the USA properties, and from there collected data from a few other properties on each street (City of Hartford Property Viewer). </p>
 
-          <p> We found everal key insights when comparing USA to non-USA homes within census tract 5039. USA homes and non-USA homes have many differences regarding sale price, market value, owner-occupancy, and  LLC ownership. For this, we are using data from Tower Ave, Granby St, Colebrook St, and Harold St. Each street contains multiple USA homes that will be compared to multiple non-USA homes on the same street. </p>
+          <p> We found everal key insights when comparing USA to non-USA homes within census tract 5039. USA homes and non-USA homes have many differences regarding sale price and market value. There are many homes and streets within this census tract, but for this, we are focuing on data from Tower Ave, Granby St, Colebrook St, and Harold St. Each street contains multiple USA homes that will be compared to multiple non-USA homes on the same street. </p>
 
          <p> When looking at average current value, USA Homes tend to be 24% less valuable than non-USA homes of similar sizes and characteristics. For example in the chart below, USA Homes on Harold St averaged at $217,100 which was 7% lower than Non-USA hoomes on this street. Tower Ave had an even greater difference of 27%. </p>
     
@@ -125,6 +125,7 @@ x<!DOCTYPE html>
           <h2>Methods</h2>
 
           <p>To gather this information, we utilized the City of Hartford Property Information Viewer, which provided detailed insights into neighboring homes and additional data for each USA property. From this resource, we extracted key information, including sales prices, sales dates, and current property values. For this build, we expanded our dataset by collecting information from several properties on each street to create a more comprehensive and accurate view of property trends.</P>
+          
 <p>We transferred this data into a Google Sheet to systematically compile and organize the information specific to our tracts. The sheet was carefully structured with multiple tabs to improve clarity and accessibility. Each street was assigned its own dedicated tab to focus on street-level trends. Additionally, we created a compiled tab to aggregate all the data into a single view and a separate tab for data visualizations to better analyze and present our findings.</p>
 
             <p>To ensure the dataset was as practical and insightful as possible, we prioritized variables that highlighted key trends, such as the variation in house prices across streets. This process involved cleaning and sorting the data based on when properties were last sold, their original sale prices, and those prices adjusted to 2024 dollars for consistency. By structuring the sheet this way, we created a clear, actionable dataset to analyze property value trends across Census Tract 5039.
