--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ x<!DOCTYPE html>
           <h2>Methods</h2>
 
           <p>To gather this information, we utilized the City of Hartford Property Information Viewer, which provided detailed insights into neighboring homes and additional data for each USA property. From this resource, we extracted key information, including sales prices, sales dates, and current property values. For this build, we expanded our dataset by collecting information from several properties on each street to create a more comprehensive and accurate view of property trends.</P>
+          <p> add disclaimer about zillow </p>
           
 <p>We transferred this data into a Google Sheet to systematically compile and organize the information specific to our tracts. The sheet was carefully structured with multiple tabs to improve clarity and accessibility. Each street was assigned its own dedicated tab to focus on street-level trends. Additionally, we created a compiled tab to aggregate all the data into a single view and a separate tab for data visualizations to better analyze and present our findings.</p>
 
