--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ x<!DOCTYPE html>
           <img src="Home Average Chart.png" style="width: 75%; margin: 30px 0"> 
 <p> To further explain the difference between USA homes and non-USA homes within this census tract, the chart above lays out the average of each street and their overall percent difference.</p>
  
-          
+<p> Our research centers on Northwest Hartford, specifically Census Tract 5039, examining the differences in homeownership experiences between USA homes, also known as Urban Suburban Affordables, and non-USA homes in the area. USA homes are affordable housing options aimed at making homeownership more accessible for middle- and low-income families. These homes are part of a land trust system, a model supported by Community Land Trusts (CLTs). CLTs maintain affordability by separating the ownership of land from the ownership of the buildings on it, ensuring that homes remain affordable, secure, and well-maintained for low- and moderate-income families across multiple resales. CLTs actively manage these homes, setting resale prices to maintain affordability, preventing foreclosures, and providing funds for upkeep. This model creates a resilient and enduring framework for affordable housing (Davis & King-Ries, 2024).</p>
         
         </div>
       </div>
